varios ajustes e melhorias

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
   <body>
     <div  class="box_centralizado">
       <form id="formlogin" action="#" method="post" class="login" name='formlogin'>
-        <fieldset>
+        <fieldset style="border: solid 1px black">
           <legend align="center"> Biblioteca GECX::Acesso </legend>
 
           <div class="loader" style="display: none;"><img src="imagens/loader.gif" alt="Carregando" /></div>
